[package]
name = "penetrator-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version="0.8",features = ["os-poll", "net"]}
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.113"
bincode = "1.3.3"
lazy_static = "1.4.0"
common = { path = "../common" }